nomacs 3.14.4
=============
- fixes batch resize crash
- translations updated
- cr3 support added
- Updates
    - Qt 5.14.1
    - OpenCV 4.2.0
    - quazip 0.8
	- LibRaw (nightly)

nomacs 3.14.2
=============
- fixes SVG support (Windows only)
- fixes loading of jpe images
- adds chinese simplified translation
- libraw updated to 0.19.5 (Windows only)

nomacs 3.14.0
=============
- HEIF/HEIC support added
- metadata filtering added
- start-up time reduced
- bug fixes

nomacs 3.12.0
=============
- recent files panel renewed
- new theme
- improved dropping for thumbnail preview (copy/move/link)
- editable zoom levels
- Fill transparent background with a color added
- LAN client removed
- batch: original filename is added to the metadata 
- frameless: multi-screen setup improved
- SVG: resulting image size can be adjusted when converting 
- RLE compressed TGA support
- DRIF support
- bug fixes
- Updates
	- quazip 0.7.6
	- libraw 0.18
	- exiv2 3.3.2

nomacs 3.10.0
=============
- anti-aliasing improved
- printing improved
- print multiple pages from thumbnail preview
- animiated WebP support
- JPG compressed TIFFs supported
- batch cropping added
- PSD lib updated
- new translations: Bosnian, Croation, and Serbian
- Updates (Windows)
	- Qt 5.9.3 -> 5.11.0
	- OpenCV 3.3.1 -> 3.4.1

nomacs 3.8.0
============
- Full PhaseOne Support (Monochrome)
- RAW loader optimized (less RAM & speed-up)
- RAW loading improved (pink pixels reduced)
- MSI installer
- Drag&Drop fixes
- Batch resizing fixed
- Minor bug fixes

- Drag & Drop fixed
- Batch resize fixed
- GPS link fixed
- Translation downloader fixed

nomacs 3.6.1
============
- translations fixed
- LibRaw 0.17.0 -> 0.18.2
- bug reporting moved to github

nomacs 3.6.0
============
- Image adjustments introduced
- Exposure added
- Batch
	- Improved profiles
	- Image adjustments added
	- Settings for batch plugins
- Extended tab functions (thanks to @cornytrace)
- Settings Editor
- Icons for high DPI displays